-
Bug
-
Resolution: Done
-
P2: Important
-
5.8.0
-
macOS 10.12
-
03f492f91a9ac6d33be05488f7ea6fb5decaf873 (qt/qtdeclarative/5.12)
When the text starts with an image then it will not be rendered correctly as it does not account for the image's height. It will assume the height of the image is the same as the font used for the text and as such only part of the image will be rendered correctly.
If the text starts with a character then everything is rendered correctly.