src/quick/items/qquicktextnodeengine.cpp
@@ -423,10 +423,11 @@ void QQuickTextNodeEngine::addImage(const QRectF &rect, const QImage &image, qre
     QRectF searchRect = rect;
     if (layoutPosition == QTextFrameFormat::InFlow) {
         if (m_currentLineTree.isEmpty()) {
+            qreal y = m_currentLine.ascent() - ascent;
             if (m_currentTextDirection == Qt::RightToLeft)
-                searchRect.moveTopRight(m_position + m_currentLine.rect().topRight() + QPointF(0, 1));
+                searchRect.moveTopRight(m_position + m_currentLine.rect().topRight() + QPointF(0, y));
             else
-                searchRect.moveTopLeft(m_position + m_currentLine.position() + QPointF(0,1));
+                searchRect.moveTopLeft(m_position + m_currentLine.position() + QPointF(0, y));
         } else {
             const BinaryTreeNode *lastNode = m_currentLineTree.data() + m_currentLineTree.size() - 1;
             if (lastNode->glyphRun.isRightToLeft()) {
@@ -443,7 +444,7 @@ void QQuickTextNodeEngine::addImage(const QRectF &rect, const QImage &image, qre
     m_hasContents = true;
 }
 
-void QQuickTextNodeEngine::addTextObject(const QPointF &position, const QTextCharFormat &format,
+void QQuickTextNodeEngine::addTextObject(const QTextBlock &block, const QPointF &position, const QTextCharFormat &format,
                                          SelectionState selectionState,
                                          QTextDocument *textDocument, int pos,
                                          QTextFrameFormat::Position layoutPosition)
@@ -476,17 +477,23 @@ void QQuickTextNodeEngine::addTextObject(const QPointF &position, const QTextCha
         }
 
         qreal ascent;
-        QFontMetrics m(format.font());
+        QTextLine line = block.layout()->lineForTextPosition(pos);
         switch (format.verticalAlignment())
         {
-        case QTextCharFormat::AlignMiddle:
-            ascent = size.height() / 2 - 1;
+        case QTextCharFormat::AlignTop:
+            ascent = line.ascent();
+            break;
+        case QTextCharFormat::AlignMiddle: {
+            QFontMetrics m(format.font());
+            ascent = (size.height() - m.xHeight()) / 2;
+            break;
+        }
+        case QTextCharFormat::AlignBottom:
+            ascent = size.height() - line.descent();
             break;
         case QTextCharFormat::AlignBaseline:
-            ascent = size.height() - m.descent() - 1;
-            break;
         default:
-            ascent = size.height() - 1;
+            ascent = size.height();
         }
 
         addImage(QRectF(position, size), image, ascent, selectionState, layoutPosition);
@@ -1058,7 +1065,7 @@ void QQuickTextNodeEngine::addTextBlock(QTextDocument *textDocument, const QText
                         ? QQuickTextNodeEngine::Selected
                         : QQuickTextNodeEngine::Unselected;
 
-                addTextObject(QPointF(), charFormat, selectionState, textDocument, textPos);
+                addTextObject(block, QPointF(), charFormat, selectionState, textDocument, textPos);
             }
             textPos += text.length();
         } else {
